--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.0.1",
     "@testing-library/user-event": "^14.1.1",
+    "axios": "^1.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.1",
+    "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
+    "uniqid": "^5.4.0",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
